--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,22 @@
+
 <%- include('partials/header.ejs'); -%>
-
-    <h1>Home</h1>
+    <br>
+    <div>
+    <a class="btn btn-warning btn-lg" href="/compose">Compose</a>
+    </div>
+    <div>
+        <h1>Home</h1>
     <p> <%= homeContentEJS %> </p>
+    </div>
 
-    <% postsFoundEJS.forEach(function(post){ %>
+      <% postsFoundEJS.forEach(function(post){ %>
         <h1> <%= post.postTitle %> </h1>
 
         <% function truncateString(str, num) { %>
            <% if(str.length < num) { %>
                <% return str %>
             <% } %>
+
         <% var trunStr = str.slice(0, num) + " " + "..."; %>
         <% return trunStr %>
         <% } %>
@@ -18,8 +25,7 @@
             <%= truncateString(post.postBody, 100) %>  
             <a href="/posts/<%= post._id%>">Read more</a> 
         </p>
-        
+  
     <%})%>
-
 
 <%- include('partials/footer.ejs'); -%>
