--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>2020-21 Copyright</p>
+    <p>Akshay Rawal &copy; 2020-21 Copyright</p>
   </div>
 </div>
 </body>
