about and contact page modified

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header.ejs') -%>
 
 <h1>Contact</h1>
-<p><%= contactContentEJS %></p>
+<p>Email: rawalakshay508@gmail.com</p>
+<p>LinkedIn: https://www.linkedin.com/in/akshayrawal</p>
 
 <%- include('partials/footer.ejs') -%>
